非推奨の URL(String)を URI に変更した